# open-bilibili-link

./: .gitignore  Pipfile  README.md  default.example.ini  default.example.toml  pyproject.toml  setup.py
open_bilibili_link/: __main__.py  __meta__.py  cli.py  config.py  logger.py  models.py  plugin.py  services.py  utils.py
open_bilibili_link/configs/: cache.default.yaml  logger.default.yaml  settings.default.yaml
open_bilibili_link/plugins/: obl_fuo.py  obl_test.py  test.py
open_bilibili_link/widgets/: main.py  menu.py  routes.py
open_bilibili_link/widgets/components/: areas.py  button.py  danmu.py  dialog.py  label.py  live.py  plugin.py  setting.py  toast.py  usercard.py
open_bilibili_link/widgets/pages/: home.py  plugin.py  setting.py  test.py
open_bilibili_link/widgets/styles/: material.qss
